@@ -84,7 +84,7 @@
                 <span class="item_attribute_label"
                       tal:condition="not: meetingConfig/getUseGroupsAsCategories"
                       i18n:translate="MeetingCategory"></span>:&nbsp;&nbsp;
-                <span tal:condition="nocall:cat" tal:content="cat/getName"></span>
+                <span tal:condition="nocall:cat" tal:content="cat/Title"></span>
             </div>
             </tal:category>
 
