@@ -11,6 +11,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 -------------------
 
 - Display 'Add contacts' actions on the portlet displayed in /contacts dashboards.
+- Removed MeetingCategory.getName, one step further to separating real MeetingCategory and proposingGroup.
 
 4.1b12 (2018-12-04)
 -------------------
